--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="login">Login</string>
+    <string name="logout">Logout</string>
     <string name="sign_up">Sign Up</string>
     <string name="sign_up_text">New here? sign Up</string>
 
@@ -11,10 +12,13 @@
     <string name="back4app_app_id">WIU6J2w7auPHQKa404VrifUcwkP89FrJtmSHKsja</string>
     <string name="back4app_client_key">RU7XBiNqk59mTl0X5xgyGR2s6gl97k6UlXQLlsKA</string>
 
-    <string name="menu_profile">Profile</string>
+    <string name="menu_users">Users</string>
+    <string name="btn_follow">Follow</string>
     <string name="menu_following">Following</string>
     <string name="menu_followers">Followers</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
