--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,13 @@
     <string name="btn_follow">Follow</string>
     <string name="menu_following">Following</string>
     <string name="menu_followers">Followers</string>
+    <string name="menu_tweetFeed">Tweet Feed</string>
+    <string name="menu_profile">Profile</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="btn_tweet">Tweet</string>
     <string name="hint_tweet">Enter your Tweet</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
