--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="txt_replies">0</string>
     <string name="txt_like">0</string>
+    <string name="reply_text">Replying to</string>
 
 </resources>
